--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-server.port=${JOBERTY_PORT:8088}
+server.port=${JOBERTY_SERVICE_POR:8088}
 
 spring.sql.init.platform=postgres
 ssl=true
 spring.datasource.initialize=true
 spring.jpa.defer-datasource-initialization = true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/joberty
+spring.datasource.url=${JOBERTY_DB_URL:jdbc:postgresql://localhost:5432/joberty}
 spring.datasource.username=${JOBERTY_DB_USER:postgres}
-spring.datasource.password=${JOBERTY_DB_PASSWORD:drugstore123}
+spring.datasource.password=${JOBERTY_DB_PASS:drugstore123}
 
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
