--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${JOBERTY_SERVICE_POR:8088}
+server.port=${JOBERTY_SERVICE_POR:8089}
 
 spring.sql.init.platform=postgres
 ssl=true
@@ -19,7 +19,8 @@ spring.jpa.open-in-view=false
 server.error.include-message=always
 hibernate.connection.provider_disables_autocommit = true
 
-active-mq.broker-url=tcp://localhost:61616
+active-mq.broker-url=tcp://activemq:61616
 active-mq.user=admin
 active-mq.password=admin
 active-mq.topic=jwt.topic
+spring.activemq.packages.trust-all=true
