--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.open-in-view=false
 server.error.include-message=always
 hibernate.connection.provider_disables_autocommit = true
 
-active-mq.broker-url=tcp://localhost:61616
+active-mq.broker-url=${JOBERTY_SERVICE_ACTIVEMQ_LINK:tcp://localhost:61616}
 active-mq.user=admin
 active-mq.password=admin
 active-mq.topic=jwt.topic
