--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
+        "react-textarea-autosize": "^8.3.4",
         "redux": "^4.2.0",
         "redux-persist": "^6.0.0",
         "web-vitals": "^2.1.4",
