--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,5 +23,5 @@ active-mq.broker-url=tcp://activemq:61616
 active-mq.user=admin
 active-mq.password=admin
 active-mq.queue=jwt.topic
-active-mq.send = jobOffer.topic
+active-mq.send = jobOffer.queue
 spring.activemq.packages.trust-all=true
