--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
         "yup": "^0.32.11"
     },
     "scripts": {
-        "start": "set PORT=3006 && react-scripts start",
+        "start": "set PORT=3006 && set SSL_CRT_FILE=./.cert/cert.pem && set SSL_KEY_FILE=./.cert/key.pem && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
