--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
         "@hookform/resolvers": "^2.8.10",
-        "@reduxjs/toolkit": "^1.8.0",
+        "@reduxjs/toolkit": "^1.8.2",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -25,7 +25,7 @@
         "yup": "^0.32.11"
     },
     "scripts": {
-        "start": "set PORT=3006 && set SSL_CRT_FILE=./.cert/cert.pem && set SSL_KEY_FILE=./.cert/key.pem && react-scripts start",
+        "start": "set HTTPS=true&&set SSL_CRT_FILE=./.cert/cert.pem&&set SSL_KEY_FILE=./.cert/key.pem&&set PORT=3006&&react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
