improvement: logging configuration

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,5 +6,7 @@ RUN mvn package  -DskipTests
 FROM openjdk:11 AS jobertyBackendRuntime
 WORKDIR /app
 COPY --from=jobertyBackendBuild /root/src/backend/target/joberty-exe.jar ./
+VOLUME ./logs
+COPY --from=jobertyBackendBuild /root/src/backend/logs ./logs
 EXPOSE 8080
 CMD java -jar joberty-exe.jar
