--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,6 @@ FROM openjdk:11 AS jobertyBackendRuntime
 WORKDIR /app
 COPY --from=jobertyBackendBuild /root/src/backend/target/joberty-exe.jar ./
 VOLUME ./logs
-COPY --from=jobertyBackendBuild /root/src/backend/logs ./logs
+#COPY --from=jobertyBackendBuild /root/src/backend/logs ./logs
 EXPOSE 8080
 CMD java -jar joberty-exe.jar
