--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=${JOBERTY_SERVICE_PORT:8088}
+server.port=${JOBERTY_SERVICE_PORT:8080}
 spring.sql.init.platform=postgres
 ssl=true
 spring.datasource.initialize=true
 spring.jpa.defer-datasource-initialization = true
 
-spring.datasource.url=${JOBERTY_DB_URL:jdbc:postgresql://localhost:5432/joberty}
-spring.datasource.username=${JOBERTY_DB_USER:postgres}
-spring.datasource.password=${JOBERTY_DB_PASS:drugstore123}
+spring.datasource.url=${JOBERTY_DB_URL}
+spring.datasource.username=${JOBERTY_DB_USER}
+spring.datasource.password=${JOBERTY_DB_PASS}
 
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
